# ChangeLog for dev-util/qgit
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/ChangeLog,v 1.22 2007/04/14 06:36:30 welp Exp $

  14 Apr 2007; Peter Weller <welp@gentoo.org> qgit-1.5.5.ebuild:
  Stable on amd64 wrt bug 173331

  08 Apr 2007; Markus Rothe <corsair@gentoo.org> qgit-1.5.5.ebuild:
  Stable on ppc64; bug #173331

  06 Apr 2007; nixnut <nixnut@gentoo.org> qgit-1.5.5.ebuild:
  Stable on ppc wrt bug 173331

  04 Apr 2007; Raúl Porcel <armin76@gentoo.org> qgit-1.5.5.ebuild:
  x86 stable wrt bug 173331

*qgit-1.5.5 (26 Feb 2007)

  26 Feb 2007; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.5.2.ebuild,
  -qgit-1.5.4.ebuild, +qgit-1.5.5.ebuild:
  New upstream version. Remove unused versions.

  15 Feb 2007; Christian Faulhammer <opfer@gentoo.org> qgit-1.5.3.ebuild:
  stable x86; bug 167018

*qgit-1.5.4 (15 Feb 2007)

  15 Feb 2007; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.5.4.ebuild:
  New upstream version.

*qgit-1.5.3 (14 Nov 2006)

  14 Nov 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.1.1.ebuild,
  -qgit-1.2.ebuild, -qgit-1.4.ebuild, -qgit-1.5.1.ebuild,
  +qgit-1.5.3.ebuild:
  New upstream version. Cleanup old ones.

*qgit-1.5.2 (30 Sep 2006)

  30 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.5.2.ebuild:
  New upstream version.

*qgit-1.5.1 (27 Sep 2006)

  27 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> -qgit-1.5.ebuild,
  +qgit-1.5.1.ebuild:
  New version. Remove 1.5 as it has an annoying bug.

*qgit-1.5 (10 Sep 2006)

  10 Sep 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.5.ebuild:
  New upstream version.

  15 Aug 2006; Markus Rothe <corsair@gentoo.org> qgit-1.4.ebuild:
  Added ~ppc64

*qgit-1.4 (30 Jul 2006)

  30 Jul 2006; Fernando J. Pereda <ferdy@gentoo.org> +qgit-1.4.ebuild:
  Version bump, bug #141951. Reported by Troy Telford <troyt@myrealbox.com>

  30 Jun 2006; Luca Barbato <lu_zero@gentoo.org> qgit-1.2.ebuild:
  Marked ~ppc
