@@ -1,24 +1,34 @@
-DIST qgit-1.5.3.tar.bz2 190463 RMD160 917738e3b0795e6bd8fb74cf3617b62972afc63f SHA1 0596632793b3c0c3a419c3c753ffef0040a2464d SHA256 6a59729af62af44c7b0a04f57e7f73682f800e70526cda78bc02e10cf6da642c
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST qgit-1.5.5.tar.bz2 198114 RMD160 10e0dd6aeb0ea7710334974fad047ac96d80c56b SHA1 b914eed55a569e84c074c3baaf69d23844f81561 SHA256 83beaf2e6cbd84f5d5d32b5de7365bd6b33205e60af57de0c3013a4299842782
-EBUILD qgit-1.5.3.ebuild 630 RMD160 cbf38ca84db55975581c052dc6de1bc7d0c01886 SHA1 9d9ac8bdc982b007e0b81457d6011844040ee1a6 SHA256 13f76469c8b7d33c6a93f4665ebe406d14ab1fef767c719f77f4ce8ac53becff
-MD5 88f13bb6a309035da2ec9c17baa34361 qgit-1.5.3.ebuild 630
-RMD160 cbf38ca84db55975581c052dc6de1bc7d0c01886 qgit-1.5.3.ebuild 630
-SHA256 13f76469c8b7d33c6a93f4665ebe406d14ab1fef767c719f77f4ce8ac53becff qgit-1.5.3.ebuild 630
+DIST qgit-1.5.6.tar.bz2 205837 RMD160 30347b43185c0cf9f68dc76c842030f5b50ab876 SHA1 0b2b3b9c30c071381d8775c9444409c684000493 SHA256 77cda1a1b628354169ba6381e048478aee7cbe31c64f1842481fad0702551338
 EBUILD qgit-1.5.5.ebuild 626 RMD160 66aff74e198d76d5ca5cd890b137cd28e8b1eb62 SHA1 003b3378a1e9344babf6cb3164b6bc084ae9d806 SHA256 680a2949afef010128e11c8f9125db3e9f9b24cce3f82b293a43b318090c2df9
 MD5 c6f722b9a0b32878ba5b6b5f1c4a7f49 qgit-1.5.5.ebuild 626
 RMD160 66aff74e198d76d5ca5cd890b137cd28e8b1eb62 qgit-1.5.5.ebuild 626
 SHA256 680a2949afef010128e11c8f9125db3e9f9b24cce3f82b293a43b318090c2df9 qgit-1.5.5.ebuild 626
-MISC ChangeLog 3219 RMD160 20583e7fbb0dc3fe2778a04b083f72d062120319 SHA1 f2dc95ae317626e3a7dd87cceedb6905c41ac6e1 SHA256 36f0d2953a2fd2be180881187fcc2d5be4c09a53e861d3fa74d9c45f0d4bee5c
-MD5 9a00b5b2088d48f958c6927708687065 ChangeLog 3219
-RMD160 20583e7fbb0dc3fe2778a04b083f72d062120319 ChangeLog 3219
-SHA256 36f0d2953a2fd2be180881187fcc2d5be4c09a53e861d3fa74d9c45f0d4bee5c ChangeLog 3219
+EBUILD qgit-1.5.6.ebuild 631 RMD160 4604aa75c7dc50f48e6683313c682c8fc60df28f SHA1 afe97f1e60ddb9fd4e68e7d2e2c6a19235f8bb26 SHA256 ef266c2015f1527d4e198c5b903952d3ffe8cec62cc366bd8756ff0c384e83d5
+MD5 9f712c13413553a663d315717ac591ae qgit-1.5.6.ebuild 631
+RMD160 4604aa75c7dc50f48e6683313c682c8fc60df28f qgit-1.5.6.ebuild 631
+SHA256 ef266c2015f1527d4e198c5b903952d3ffe8cec62cc366bd8756ff0c384e83d5 qgit-1.5.6.ebuild 631
+MISC ChangeLog 3354 RMD160 2bda413bec9143c9cbe94a1283fe63aa27bc6980 SHA1 e5bce958f404dab51c9e0624ee85961ba469d524 SHA256 652eb66762660b23c00a0436a56a92be94676781c73d795ec1787f892b558586
+MD5 4da7b1d86dac68cffabc799d79416b29 ChangeLog 3354
+RMD160 2bda413bec9143c9cbe94a1283fe63aa27bc6980 ChangeLog 3354
+SHA256 652eb66762660b23c00a0436a56a92be94676781c73d795ec1787f892b558586 ChangeLog 3354
 MISC metadata.xml 255 RMD160 db414d29c445e388d486f826b368b5359b74f72d SHA1 0317bb4c83bba580ddb586efe8a929b85759d0d2 SHA256 45f65b01b99f13e87c53843765ab287065988ab80e675287cdcc81ce3e22f9a2
 MD5 c2a7223a6caa6908d13db012ce74b388 metadata.xml 255
 RMD160 db414d29c445e388d486f826b368b5359b74f72d metadata.xml 255
 SHA256 45f65b01b99f13e87c53843765ab287065988ab80e675287cdcc81ce3e22f9a2 metadata.xml 255
-MD5 97b70ceb81e26c774a70cf9ce432455a files/digest-qgit-1.5.3 235
-RMD160 89597dacd7b32a385f4c4289de7386ae06c2e872 files/digest-qgit-1.5.3 235
-SHA256 202588f05699852e207fda9622d47cdffeec88525b400c91a02e942dcf60801a files/digest-qgit-1.5.3 235
 MD5 4f8adde2cb0307325fc1a03b593fb2fc files/digest-qgit-1.5.5 235
 RMD160 bbae67d81d25beae3174228d65f7bc4eedc09911 files/digest-qgit-1.5.5 235
 SHA256 b3dc435d8e1ca795f13f8d4117971130cf58cc4317412e4d1bae59a9153106dd files/digest-qgit-1.5.5 235
+MD5 dfd61b210039d93b7dfa0207f4a666d2 files/digest-qgit-1.5.6 235
+RMD160 a2dc9fb284d8240792ec5b5c371b49f676694baa files/digest-qgit-1.5.6 235
+SHA256 c0191028aed9be78b198bc3b7e45648a19b9fdb5849a620959bdf0e5f58b8ff9 files/digest-qgit-1.5.6 235
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.4 (GNU/Linux)
+
+iD8DBQFGZeF1z974XjDVpbkRArmuAKDTloVPq8YTUqf7a063nE4YxzalJwCaAp20
+P61o8+Bp8FRzX299OWfJHxg=
+=Jloi
+-----END PGP SIGNATURE-----
