@@ -1,3 +1,0 @@
-MD5 c1420385dc18716f0ab538756e7e2476 qgit-1.5.3.tar.bz2 190463
-RMD160 917738e3b0795e6bd8fb74cf3617b62972afc63f qgit-1.5.3.tar.bz2 190463
-SHA256 6a59729af62af44c7b0a04f57e7f73682f800e70526cda78bc02e10cf6da642c qgit-1.5.3.tar.bz2 190463
