@@ -1,0 +1,3 @@
+MD5 d96f1a1c437d72603b60d34f19084609 qgit-1.5.6.tar.bz2 205837
+RMD160 30347b43185c0cf9f68dc76c842030f5b50ab876 qgit-1.5.6.tar.bz2 205837
+SHA256 77cda1a1b628354169ba6381e048478aee7cbe31c64f1842481fad0702551338 qgit-1.5.6.tar.bz2 205837
