@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/qgit-1.5.3.ebuild,v 1.2 2007/02/15 18:07:07 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/qgit/Attic/qgit-1.5.6.ebuild,v 1.1 2007/06/05 22:19:27 jokey Exp $
 
 inherit qt3
 
@@ -13,14 +13,14 @@ SRC_URI="mirror://sourceforge/${PN}/${MY_P}.tar.bz2"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~ppc ~ppc64 x86"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 IUSE=""
 
 DEPEND="=x11-libs/qt-3*"
 RDEPEND="${DEPEND}
-	>=dev-util/git-1.4.3"
+	>=dev-util/git-1.5"
 
-S=${WORKDIR}/${MY_P}
+S="${WORKDIR}/${MY_P}"
 
 src_install() {
 	dobin src/qgit
